--- a/assets/shared/styles/forms.css
+++ b/assets/shared/styles/forms.css
@@ -308,9 +308,10 @@ form[class$="-search"] .form-section-content {
 /* <-- filter for display */
 
 @media only screen and (max-width : 30rem) {
-	select,
-	textarea {
+	.form-input select,
+	.form-input textarea {
 		width: 100%;
+		max-width: 100%;
 	}
 }
 
